modifying .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 #ignoring files:
 
 *.o
-opt
+
+#ignoring extension less files
+*	#ignore everything
+!*.*	#not ignore files with extension
+!*/	#not ignore any directory
 
